--- a/index.html
+++ b/index.html
@@ -24,20 +24,18 @@
 <body>
 
     <header>
-
-
-
+        <div class="container-md py-2">
+            <button type="button" id="button">
+                CLICCAMI PER APRIRE IL QUADRATONE
+            </button>
+        </div>
     </header>
     <main>
-
+        <div class=" container quadratone d-flex flex-wrap">
+        </div>
 
 
     </main>
-    <footer>
-
-
-
-    </footer>
     
     <script src="js/scripts.js" type="text/javascript"></script>
 
