--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
     <header>
         <div class="container-md py-2">
+            <select name="" id="difficulty">
+                <option value="100"> Easy</option>
+                <option value="81" > Medium</option>
+                <option value="49" > Hard</option>
+
+            </select>
             <button type="button" id="button">
                 CLICCAMI PER APRIRE IL QUADRATONE
             </button>
